syntax = "proto3";

package HistoryPackage;

import "google/protobuf/timestamp.proto";
import "common.proto";

service HistoryService {
  rpc CreateHistoryAttempt (CreateHistoryAttemptRequest) returns (CreateHistoryAttemptResponse);
  rpc GetAttemptsByUserId (common.ID) returns (GetAttemptsByUserIdResponse);
}

message CreateHistoryAttemptRequest {
  string sessionId = 1;
  string questionAttempt = 2;
}

message CreateHistoryAttemptResponse {
  repeated History histories = 1;
}

message GetAttemptsByUserIdResponse {
    repeated Attempt attempts = 1;
}

message History {
  string id = 1;
  string userId = 2;
  repeated Attempt attempts = 3;
}

message Attempt {
  string questionId = 1;
  string questionAttempt = 2;
  google.protobuf.Timestamp dateTimeAttempted = 3;
}

 